Concept for a new layout.

--- a/content/meetups/stammtisch/2025-02-28.md
+++ b/content/meetups/stammtisch/2025-02-28.md
@@ -10,16 +10,55 @@ tags: ["meetup", "stammtisch", "berlin"]
 date: 2025-02-28T19:00:00+01:00
 draft: false
 ---
+{{< lead >}}Welcome to our cosy Godot Engine Stammtisch! We will hang out, chat and maybe show some of our current projects! 🦜
+{{< /lead >}} {{< badge >}} Beginner friendly! {{< /badge >}} 
+### When
+2025-02-28 (Friday)  
+19:00 - 23:00, local time (Berlin)
 
-# Details
-Welcome to our cosy Godot Engine Stammtisch! This is not a structured meeting, but rather a friendly get-together. We will hang out, chat and maybe show some of our current projects! 🦜
+### Where?
+**Berlin Creators / Individual Network Berlin**  
+Lehrter Str. 53  
+10557 Berlin-Moabit
 
-Regardless if you are an artist, designer, programmer, beginner, hobbyist, professional or anything in between: join us for sharing knowledge, creating art together, coding together, joining game jams together and having fun! 🌼
 
-This meetup will happen at Berlin Creators / Individual Network Berlin, Lehrter Str. 53, 10557 Berlin-Moabit. 🌳
+{{< button href="https://www.openstreetmap.org/#map=18/52.534430/13.358479" target="_blank" >}}
+See on OpenStreetMap
+{{< /button >}}
 
-You can also join us via Discord on our Discord Server. ☎️
+You may also join remotely, via our {{< icon "discord" >}} [Discord Server](https://discord.gg/dqg7TxMRH9).
 
-Follow us on Mastodon for updates. 📢
 
-Please be excellent to each other! 🕊️
+## For me?
+***For everybody!*** No matter if you are an artist, designer, programmer, beginner, hobbyist, professional or anything in between: join us for sharing knowledge, creating art together, coding together, joining game jams together and having fun! 🌼 Fans of other platforms and engines are equally welcome.
+
+## What to expect?
+This is not a structured meeting, but rather a friendly get-together. A typical evening usually looks as follows...
+
+{{< timeline >}}
+
+{{< timelineItem icon="godot" header="Hello Godot!" badge="19:00" >}}
+Say hello, find a chair, and get comfortable! 
+You can get a drink and a snack from the donation-funded fridge (usually around EUR 1,-)
+Also, if you are new or would like some guidance, let us know and we help you get settled in!
+{{< /timelineItem >}}
+
+{{< timelineItem icon="email" header="Who is who?" badge="19:20" >}}
+A quick round of intros - find out what the others are about and say as much or as little as you like about yourself. What are your interests? What do you do with Godot?. 
+{{< /timelineItem >}}
+
+{{< timelineItem icon="lightbulb" header="Show & Tell!" badge="~5-10 minutes per" subheader="Got something to show?" >}}
+Those that like can show off their latest projects, videos, art, or anything else they are working on. Feel free to ask questions!
+
+There's a video projector and usually someone has a spare laptop if there are technical difficulties (or you don't have one).
+{{< /timelineItem >}}
+
+{{< timelineItem icon="tag" header="Open-Ended Discussions" badge="open end" >}}
+Switch rooms, form smaller groups, talk about anything you like!
+{{< /timelineItem >}}
+
+{{< /timeline >}}
+
+## Rules?
+Please be excellent to each other! 🕊️ 
+We're a very inclusive group and work tirelessly to provide a fun and safe environment at these meetings for everyone.
