--- a/content/meetups/stammtisch/2025-03-28.md
+++ b/content/meetups/stammtisch/2025-03-28.md
@@ -13,8 +13,8 @@ draft: false
 {{< lead >}}Welcome to our cosy Godot Engine Stammtisch! We will hang out, chat and maybe show some of our current projects! 🦜
 {{< /lead >}} {{< badge >}} Beginner friendly! {{< /badge >}} 
 ### When
-2025-03-28 (Friday)
-19:00 - 23:00 CEST
+2025-03-28 (Friday)  
+19:00 - 23:00, local time (Berlin)
 
 ### Where?
 **Berlin Creators / Individual Network Berlin**  
@@ -30,7 +30,7 @@ You may also join remotely, via our {{< icon "discord" >}} [Discord Server](http
 
 
 ## For me?
-For everybody! No matter if you are an artist, designer, programmer, beginner, hobbyist, professional or anything in between: join us for sharing knowledge, creating art together, coding together, joining game jams together and having fun! 🌼 Fans of other platforms and engines are equally welcome.
+***For everybody!*** No matter if you are an artist, designer, programmer, beginner, hobbyist, professional or anything in between: join us for sharing knowledge, creating art together, coding together, joining game jams together and having fun! 🌼 Fans of other platforms and engines are equally welcome.
 
 ## What to expect?
 This is not a structured meeting, but rather a friendly get-together. A typical evening usually looks as follows...
