Hmm, no idea what's wrong with the layout now.

--- a/content/meetups/stammtisch/2025-03-28.md
+++ b/content/meetups/stammtisch/2025-03-28.md
@@ -1,7 +1,7 @@
 ---
 title: "Godot Engine Stammtisch @ Berlin Creators / IN Berlin"
 
-layout: card
+layout: hero
 
 meetups: ["stammtisch"]
 categories: ["meetup", "event"]
